data/derived/fa15/progs/unify/prog3491.ml.out
Characters 56-66:
  else append (n mod 10) (digitsOfInt(n/10));;
              ^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         'a list
